<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/backgroundColor">
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:onClick="back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@drawable/back_back"
        android:contentDescription="@string/back_button" />
 <ScrollView
     android:background="@color/light"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"

         android:translationZ="30dp"
         >
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
             app:cardCornerRadius="75dp"
             android:translationZ="20dp">
             <ImageView
                 android:transitionName="profile"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:id="@+id/receiver_image"
                 android:onClick="viewImage"
                 />
         </androidx.cardview.widget.CardView>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/rec_name"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="#000"
             android:translationZ="10dp"
             android:text="@string/name"
             android:padding="10dp"/>
       <androidx.cardview.widget.CardView
           app:cardCornerRadius="5dp"
           android:layout_margin="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <androidx.constraintlayout.widget.ConstraintLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <TextView
                   android:id="@+id/infolabel"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:text="@string/receiver_info"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   android:textColor="@color/textColor"
                   android:padding="5dp"/>

                <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:padding="10dp"
                       android:layout_marginStart="10dp"
                       android:text="@string/in_contact_by"
                       app:layout_constraintTop_toBottomOf="@id/infolabel"
                       app:layout_constraintStart_toStartOf="parent"
                       android:textColor="@color/textColor"
                       android:id="@+id/in_contact_label"
                       android:textSize="16sp" />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@id/infolabel"
                       app:layout_constraintStart_toEndOf="@id/in_contact_label"
                       android:padding="10dp"

                       android:textColor="@color/textColor"
                       android:textSize="16sp"
                       android:layout_gravity="center"
                       android:id="@+id/in_contact_by"/>


                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="16sp"
                       android:text="@string/contact_info"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/in_contact_label"
                       android:layout_marginStart="10dp"
                       android:textColor="@color/textColor"
                       android:id="@+id/in_contact_info_label"
                       android:padding="10dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="16sp"
                       app:layout_constraintStart_toEndOf="@id/in_contact_info_label"
                       app:layout_constraintTop_toBottomOf="@id/in_contact_label"
                       android:layout_marginStart="10dp"
                       android:padding="5dp"
                       android:overScrollMode="ifContentScrolls"
                       android:textColor="@color/textColor"
                       android:id="@+id/info_contact_by"
                       android:layout_gravity="center"/>


                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="16sp"
                       android:text="@string/mood_label"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/in_contact_info_label"
                       android:textColor="@color/textColor"
                       android:layout_marginStart="10dp"
                       android:id="@+id/mood_label"
                       android:padding="10dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="16sp"
                       android:layout_marginStart="10dp"
                       android:hint="@string/mood_default_value"
                       android:textColor="@color/textColor"
                       android:id="@+id/mood_value"
                       app:layout_constraintStart_toEndOf="@id/mood_label"
                       app:layout_constraintTop_toBottomOf="@id/info_contact_by"
                       android:padding="10dp"
                       android:layout_gravity="center"/>


                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="16sp"
                       android:text="@string/free_time_text"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/mood_label"
                       android:layout_marginStart="10dp"
                       android:id="@+id/free_time_label"
                       android:textColor="@color/textColor"
                       android:padding="10dp"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textSize="16sp"
                       app:layout_constraintStart_toEndOf="@id/free_time_label"
                       app:layout_constraintTop_toBottomOf="@id/mood_value"
                       android:padding="10dp"

                       android:textColor="@color/textColor"
                       android:id="@+id/free_time_value"
                       android:hint="no time"
                       android:layout_gravity="center"/>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:text="Setting "
                   android:id="@+id/setting_label"
                   app:layout_constraintTop_toBottomOf="@id/free_time_value"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:textColor="@color/textColor"
                   android:padding="10dp"/>


               <TextView
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/setting_label"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/make_private_btn"

                   android:layout_marginHorizontal="10dp"

                   android:textAllCaps="false"
                   android:drawableEnd="@drawable/lock_24"
                   android:textColor="@color/textColor"
                   android:drawableBottom="@drawable/bottom_line"
                   android:gravity="start|center_vertical"
                   android:background="?android:selectableItemBackground"
                   android:textSize="16sp"
                   android:fontFamily="sans-serif"

                   android:text="Make Conversation Private"
                   android:padding="10dp"/>

               <TextView
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/make_private_btn"

                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/delete_btn"
                   android:layout_marginHorizontal="10dp"

                   android:drawableEnd="@drawable/ic_baseline_delete_24"
                   android:drawableTint="@color/red"
                   android:background="?android:selectableItemBackground"
                   android:textSize="16sp"
                   android:gravity="start|center_vertical"
                   android:drawableBottom="@drawable/bottom_line"
                   android:textColor="@color/red"
                   android:textAllCaps="false"
                   android:text="Delete chat"
                   android:padding="10dp"/>

               <TextView
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/delete_btn"

                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAllCaps="false"

                   android:gravity="start|center_vertical"
                   android:background="?android:selectableItemBackground"
                   android:id="@+id/block_btn"
                   android:layout_marginHorizontal="10dp"

                   android:drawableEnd="@drawable/ic_baseline_block_24"
                   android:drawableTint="@color/red"
                   android:drawableBottom="@drawable/bottom_line"
                   android:textColor="@color/red"
                   android:text="Block User"
                   android:textSize="16sp"
                   android:padding="10dp"/>

               <TextView
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/block_btn"

                   android:layout_width="match_parent"
                   android:textAllCaps="false"
                   android:layout_height="wrap_content"
                   android:id="@+id/report_btn"
                   android:layout_marginHorizontal="10dp"
                   android:gravity="start|center_vertical"
                   android:background="?android:selectableItemBackground"
                   android:textSize="16sp"
                   android:drawableTint="@color/red"
                   android:drawableEnd="@drawable/ic_baseline_report_24"
                   android:textColor="@color/red"
                   android:text="Report User"
                   android:drawableBottom="@drawable/bottom_line"
                   android:padding="10dp"/>
           </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>